Got the video working pretty well.  Need more debugging on resizeing as it seems to lag a bit if going from phone to desktop triggering a video load.  But for the most part it seems to be working.  Still need to fix css menu z-index issues.

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -51,35 +51,7 @@ header img {
 
 
 
-.tv {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
 
-  width: 100%;
-  height: 100%;
-
-  overflow: hidden;
-  
-  .screen {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 0;
-
-    margin: auto;
-
-    opacity: 0;
-    transition: opacity .5s;
-
-    &.active {
-      opacity: 1;
-    }
-  }
-}
 
 
 
