--- a/src/scss/_hero-picture.scss
+++ b/src/scss/_hero-picture.scss
@@ -31,9 +31,46 @@
 }
 
 
-//Move the hero-cta buttons when medium and higher
-//@include media-breakpoint-up(md) {
+
+.tv {
+  display: none;
+}
+
+
+
 @include lg {
+
+    .tv {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 0;
+
+        width: 100%;
+        height: 100%;
+
+        overflow: hidden;
+
+        .screen {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 0;
+
+            margin: auto;
+
+            opacity: 0;
+            transition: opacity .5s;
+
+            &.active {
+                opacity: 1;
+            }
+        }
+    }
+
     #hero-cta-section {
         position: absolute;
         top: 1em;
